# ManulEngine

./: .cursorrules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  MANIFEST.in  MANUL_DSL_CONTRACT.md  README.md  README_DEV.md  browser-manul-0.0.1.vsix  bump_version.py  debug_mess.py  debug_mess2.py  docker-compose.yml  dom_utils.js  hunt_dnipro_coffee.py  hunt_duckduckgo.py  hunt_github.py  hunt_internet_archive.py  hunt_osm.py  hunt_wiki.py  manul.py  manul_engine_configuration.json  pages.json  pr_check_synth.txt  pr_check_synth_after_review.txt  pyproject.toml  report_gen.py  requirements.txt  run_tests.py  test_chrome_cpu.py  test_log.txt  test_output.txt  test_output2.txt
.claude/skills/add-config-key/: SKILL.md
.claude/skills/add-custom-control/: SKILL.md
.claude/skills/add-step-kind/: SKILL.md
.claude/skills/bump-version/: SKILL.md
.claude/skills/run-hunt-tests/: SKILL.md
.claude/skills/setup-dev-env/: SKILL.md
.claude/skills/sync-contracts/: SKILL.md
.claude/skills/tune-llm/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: docker-dev.yml  docker-publish.yml  lint.yml  manul-ci.yml  release.yml  release_tag.yml  synthetic-tests.yml
benchmarks/fixtures/: overlapping.html  shadow_dom.html
contracts/: MANUL_API_CONTRACT.md  MANUL_CLI_CONTRACT.md  MANUL_CONFIG_CONTRACT.md  MANUL_DEBUG_CONTRACT.md  MANUL_DSL_CONTRACT.md  MANUL_HOOKS_CONTRACT.md  MANUL_REPORTING_CONTRACT.md  MANUL_SCORING_CONTRACT.md
controls/: demo_custom.py
custom-instructions/repo/.github/: copilot-instructions.md
demo/: README.md  manul_engine_configuration.json  pages.json  run_demo.py
demo/benchmarks/: run_benchmarks.py
demo/benchmarks/fixtures/: custom_dropdown.html  dynamic_ids.html  nested_tables.html
demo/controls/: demo_custom.py
demo/examples/python/: demo_echo.py
demo/pages/: demoqa.com.json  en.wikipedia.org.json  rahulshettyacademy.com.json  testautomationpractice.blogspot.com.json  www.saucedemo.com.json
demo/playground/nested/: demo_tags.py
demo/scripts/: call_python_showcase.py
demo/tests/: call_python_variants.hunt  conditionals_example.hunt  demoqa.hunt  mega.hunt  saucedemo.hunt
docs/: ENGINE_HEART_PARITY.md  README.md  dsl-for-llms.md  dsl-syntax.md  extensions.md  getting-started.md  installation.md  integration.md  loops-and-pages.md  overview.md  reports.md
docs/adr/: 001-mixin-pattern.md  002-custom-test-runner.md  003-treewalker-snapshot.md  004-heuristics-first.md  README.md
engine/: __init__.py  actions.py  cache.py  core.py  helpers.py  js_scripts.py  prompts.py  scoring.py
engine/test/: __init__.py  test_00_engine.py  test_01_ecommerce.py  test_02_social.py  test_03_saas.py  test_04_travel.py  test_05_fintech.py  test_06_media.py  test_07_gov_health.py  test_08_crm.py  test_09_edtech.py  test_10_mess.py  test_11_cyber.py  test_12_ai_modes.py  test_13_controls_cache.py  test_14_qa_classics.py  test_15_facebook_final_boss.py  test_engine.py
framework/: config.py  engine.py  test_engine.py
manul_engine/: __init__.py  __main__.py  _test_runner.py  _types.py  actions.py  agent_cli.py  api.py  cache.py  cli.py  conditionals.py  config.py  controls.py  core.py  debug.py  exceptions.py  explain_next.py  helpers.py  hooks.py  imports.py  js_scripts.py  lifecycle.py  llm.py  logging_config.py  packager.py  prompts.py  recorder.py  reporter.py  reporting.py  scanner.py  scheduler.py  scoring.py  variables.py
manul_engine/cdp/: __init__.py  browser.py  chrome.py  conn.py  keys.py  page.py  protocol.py
manul_engine/test/: __init__.py  test_00_engine.py  test_01_ecommerce.py  test_02_social.py  test_03_saas.py  test_04_travel.py  test_05_fintech.py  test_06_media.py  test_07_gov_health.py  test_08_crm.py  test_09_edtech.py  test_10_mess.py  test_11_cyber.py  test_12_ai_modes.py  test_13_controls_cache.py  test_13_facebook_final_boss.py  test_14_hooks.py  test_14_qa_classics.py  test_15_facebook_final_boss.py  test_16_disambiguation.py  test_16_hooks.py  test_17_custom_controls.py  test_17_frontend_hell.py  test_18_disambiguation.py  test_18_variables.py  test_19_custom_controls.py  test_19_dynamic_vars.py  test_20_tags.py  test_20_variables.py  test_21_advanced_interactions.py  test_21_dynamic_vars.py  test_22_reporting.py  test_22_tags.py  test_23_advanced_interactions.py  test_23_reporter.py  test_24_reporting.py  test_24_wikipedia_search.py  test_25_lifecycle_hooks.py  test_25_reporter.py  test_26_logical_steps.py  (+54 more)
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
pages/: demoqa.com.json  example.com.json  testautomationpractice.blogspot.com.json  www.saucedemo.com.json
playground/nested/: demo_tags.py
prompts/: README.md  description_to_hunt.md  html_to_hunt.md
scripts/: call_python_showcase.py  measure_tokens.py
tests/: call_python_variants.hunt  demo_controls.hunt  demo_helpers.py  demo_login.hunt  demo_variables.hunt  demoqa.hunt  doramy.hunt  hunt_chrome_cpu.py  hunt_colors_multi.py  hunt_country_select.py  hunt_days_checkbox.py  hunt_demoqa.hunt  hunt_demoqa.py  hunt_dnipro_coffee.py  hunt_double_click.py  hunt_drag_drop.py  hunt_duckduckgo.py  hunt_exercise.py  hunt_expandtesting.hunt  hunt_expandtesting.py  hunt_facebook.py  hunt_gender_radio.py  hunt_github.py  hunt_login.py  hunt_mega.hunt  hunt_mega.py  hunt_pagination.py  hunt_rahul.hunt  hunt_rahul.py  hunt_scrolling_dropdown.py  hunt_shadow_dom.py  hunt_static_table.py  hunt_wiki.py  hunt_wikipedia.py  mega.hunt  rahul.hunt  saucedemo.hunt  wikipedia.hunt
tests/helpers/: demo_api.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json
vscode-extension/prompts/: README.md  description_to_hunt.md  html_to_hunt.md
vscode-extension/src/: cacheTreeProvider.ts  configPanel.ts  constants.ts  debugControlPanel.ts  explainHoverProvider.ts  explainLensProvider.ts  extension.ts  formatter.ts  huntRunner.ts  huntTestController.ts  schedulerPanel.ts  stepBuilderPanel.ts
vscode-extension/syntaxes/: hunt.tmLanguage.json
